[package]
name = "wordpress_posts_to_md"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }

select = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.regex]
version = "1.3"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = ["std"]
